trying to sign readState request
Signed-off-by: Dominic Woerner <dominic.woerner@dfinity.org>

--- a/src/metamask_ic_frontend/src/index.html
+++ b/src/metamask_ic_frontend/src/index.html
@@ -14,7 +14,7 @@
       <br />
       <br />
       <form id="login_form" action="#">
-        <button type="submit">Coonect with MetaMask</button>
+        <button type="submit">Connect with MetaMask</button>
       </form>
       <section id="login"></section>
     </main>
