create session by signing delegation
Signed-off-by: Dominic Woerner <dominic.woerner@dfinity.org>

--- a/src/metamask_ic_frontend/src/index.html
+++ b/src/metamask_ic_frontend/src/index.html
@@ -16,6 +16,9 @@
       <form id="login_form" action="#">
         <button type="submit">Connect with MetaMask</button>
       </form>
+      <form id="session_form" action="#">
+        <button type="submit">Create Session</button>
+      </form>
       <section id="login"></section>
     </main>
       <form id="greeting_form" action="#">
